--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -1,63 +1,31 @@
 {
-  "name": "corona",
-  "version": "1.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "description": "Corona Frontend",
   "author": "Maximilian Schmitz <mschmitz@maxuniverse.de>; Sebastian Hofmeister <s.hfm@gservon.de>",
-  "license": "MIT",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "aws-sdk": "^2.689.0",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.14.0",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
-    "perfect-scrollbar": "^1.5.0",
-    "process": "^0.11.10",
-    "secure-ls": "^1.2.6",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3",
-    "vuex-shared-mutations": "^1.0.2"
+    "axios": "^0.21.1",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-vue": "^2.0.2",
-    "config": "^3.3.1",
-    "css-loader": "^3.5.3",
-    "html-webpack-plugin": "^4.3.0",
-    "node-sass": "^4.14.1",
-    "path": "^0.12.7",
-    "sass-loader": "^8.0.2",
-    "vue-loader": "^15.9.2",
-    "vue-sidebar-menu": "^4.5.4",
-    "vue-simple-uploader": "^0.7.4",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.11",
-    "vuex-multi-tab-state": "^1.0.13",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.9.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "vuetify-loader": "^1.7.0",
+    "vuex-multi-tab-state": "^1.0.16"
   },
   "postcss": {
     "plugins": {
@@ -68,5 +36,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "license": "MIT"
 }
