--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
-    "axios": "^0.21.1",
+    "vue-apexcharts": "^1.6.0",
+    "vue-cookies": "^1.7.4",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0",
-    "vue-cookies": "^1.7.4"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
