--- a/.github/workflows/gh-actions-viewer.yml
+++ b/.github/workflows/gh-actions-viewer.yml
@@ -13,13 +13,13 @@ jobs:
       env:
         PORT: 80
       steps:
-         - uses: actions/checkout@v2
-         - name: Run docker-compose stack
-            run: docker-compose -f docker-compose.yml up --build --force-recreate -d
-         - name: Check running containers
-            run: docker ps -a
-         - name: Check folder
-            run: pwd
-         - name: Check files
-            run: ls -ltr
+      - uses: actions/checkout@v2
+      - name: Run docker-compose stack
+        run: docker-compose -f docker-compose.yml up --build -d
+      - name: Check running containers
+        run: docker ps -a
+      - name: Check folder
+        run: pwd
+      - name: Check files
+        run: ls -ltr
        
