--- a/.github/workflows/gh-actions-viewer.yml
+++ b/.github/workflows/gh-actions-viewer.yml
@@ -14,6 +14,11 @@ jobs:
 
       steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+              node-version: ${{ matrix.node-version }}
+              cache: 'npm'
       - name: Install necessary packages
         run: npm install
       - name: Run 'npm audit fix' 
