--- a/.github/workflows/gh-actions-viewer.yml
+++ b/.github/workflows/gh-actions-viewer.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Build Web content
         run: npm run build
       - name: Run build script 
-        run: chmod +x @/deploy.sh && bash deploy.sh
+        run: git update-index --chmod +x ./deploy.sh && bash ./deploy.sh
        
