--- a/.github/workflows/gh-actions-viewer.yml
+++ b/.github/workflows/gh-actions-viewer.yml
@@ -28,4 +28,6 @@ jobs:
       - name: Run 'npm audit fix' 
         run: npm audit fix
       - name: Build Web content
-        run: npm run build    
+        run: npm run build
+      - name: Push dist to gh-pages
+        run: ./deploy.sh
