--- a/.github/workflows/gh-actions-viewer.yml
+++ b/.github/workflows/gh-actions-viewer.yml
@@ -29,5 +29,13 @@ jobs:
         run: npm audit fix
       - name: Build Web content
         run: npm run build
-      - name: Push dist to gh-pages
-        run: ./deploy.sh
+      - name: Pushes to another repository
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source-directory: 'dist'
+          destination-github-username: 'Mugetsu15'
+          destination-repository-name: 'corona'
+          user-email: admin@maxuniverse.de
+          target-branch: gh-pages
