--- a/.github/workflows/anchore-analysis.yml
+++ b/.github/workflows/anchore-analysis.yml
@@ -38,11 +38,11 @@ jobs:
       uses: anchore/scan-action@v3
       with:
         path: "."
-    - name: Run the Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
-      uses: anchore/scan-action@b08527d5ae7f7dc76f9621edb6e49eaf47933ccd
-      with:
-        image: "localbuild/testimage:latest"
-        acs-report-enable: true
+    #- name: Run the Anchore scan action itself with GitHub Advanced Security code scanning integration enabled
+    #  uses: anchore/scan-action@b08527d5ae7f7dc76f9621edb6e49eaf47933ccd
+    #  with:
+    #    image: "localbuild/testimage:latest"
+    #    acs-report-enable: true
     - name: Upload Anchore Scan Report
       uses: github/codeql-action/upload-sarif@v1
       with:
